# k8s-tools

./: .gitignore  404.html  CHANGELOG.md  DESIGN.md  PACKAGE_USAGE.md  README.md  Taskfile.yml  index.html  mkdocs.yml  sitemap.xml  test_label_viewpoints.py  test_workflow.sh
.github/workflows/: ci.yml  test-simple.yml
CHANGELOG/: index.html
analysis-views/cluster-overview/: index.html
analysis-views/health-dashboard/: index.html
analysis-views/namespace-analysis/: index.html
analysis-views/overview/: index.html
analysis-views/relationship-analysis/: index.html
analysis-views/resource-efficiency/: index.html
analysis-views/security-analysis/: index.html
analysis-views/storage-analysis/: index.html
analysis-views/temporal-analysis/: index.html
analyzer/cli-reference/: index.html
analyzer/data-models/: index.html
analyzer/examples/: index.html
analyzer/overview/: index.html
deployment/cicd/: index.html
deployment/docker/: index.html
deployment/installation/: index.html
deployment/kubernetes/: index.html
development/api-reference/: index.html
development/architecture/: index.html
development/contributing/: index.html
development/setup/: index.html
development/testing/: index.html
docs/: CHANGELOG.md  getting-started.md  index.md
docs/analysis-views/: cluster-overview.md  health-dashboard.md  namespace-analysis.md  overview.md  relationship-analysis.md  resource-efficiency.md  security-analysis.md  storage-analysis.md  temporal-analysis.md
docs/analyzer/: cli-reference.md  data-models.md  examples.md  overview.md
docs/deployment/: cicd.md  docker.md  installation.md  kubernetes.md
docs/development/: api-reference.md  architecture.md  contributing.md  setup.md  testing.md
docs/examples/: advanced-workflows.md  basic-usage.md  custom-dashboards.md  multi-cluster.md
docs/reference/: cli-commands.md  configuration.md  database-schema.md  faq.md  troubleshooting.md
docs/reporter/: configuration.md  dashboard-guide.md  examples.md  overview.md
dummy-data/: README.md  sample-cluster-export.yaml
dummy-data/cluster-exports/: devops-stack.yaml  ecommerce-extra.yaml  ecommerce-platform.yaml  finance-cluster.yaml  finance-logistics-combined.yaml  healthcare-platform.yaml  logistics-cluster.yaml  monitoring-stack.yaml  retail-platform.yaml
dummy-data/cluster-exports/development/: dev-cluster-export.yaml
dummy-data/cluster-exports/production/: prod-cluster-export.yaml
dummy-data/cluster-exports/staging/: staging-cluster-export.yaml
dummy-data/manifests/: config-and-secrets.yaml  database-statefulset.yaml  web-frontend-deployment.yaml  web-frontend-service.yaml
dummy-data/multi-cluster/production/: east-cluster.yaml  west-cluster.yaml
examples/: multi_file_sqlite_demo.py  sqlite_demo.py
examples/advanced-workflows/: index.html
examples/basic-usage/: index.html
examples/custom-dashboards/: index.html
examples/dummy-data/: index.html
examples/multi-app-demo/backend/: deployment.yaml  service.yaml
examples/multi-app-demo/frontend/: deployment.yaml  service-ingress.yaml
examples/multi-app-demo/shared/: namespace-config.yaml  rbac-secrets.json
examples/multi-cluster/: index.html
external-materials/: INPUT.md
getting-started/: index.html
inputs/: cluster.json
javascripts/: mermaid.js
k8s-analyzer/: README.md  coverage.xml  pyproject.toml
k8s-analyzer/csv_output/: relationships.csv  resources.csv
k8s-analyzer/src/k8s_analyzer/: __init__.py  __version__.py  analyzer.py  cli.py  models.py  parser.py  sqlite_exporter.py
k8s-analyzer/tests/: test_parser.py  test_sqlite_exporter.py
k8s-reporter/: Dockerfile  LICENSE  README.md  coverage.xml  pyproject.toml
k8s-reporter/src/k8s_reporter/: __init__.py  app.py  cli.py  database.py  models.py  views.py
k8s-reporter/tests/: test_database.py
reference/cli-commands/: index.html
reference/configuration/: index.html
reference/database-schema/: index.html
reference/faq/: index.html
reference/troubleshooting/: index.html
reporter/configuration/: index.html
reporter/dashboard-guide/: index.html
reporter/examples/: index.html
reporter/overview/: index.html
search/: search_index.json
site/: sitemap.xml
site/stylesheets/: extra.css
